test/regress/5D92A5EB.test
~ Monthly from 2010/7/1
    Expenses:Auto:Gas               $100.00
    Expenses:Auto:Insurance         $100.00
    Expenses:Childcare              $100.00
    Expenses:Entertainment:Blizzard $100.00
    Expenses:Entertainment:Netflix  $100.00
    Expenses:Groceries              $100.00
    Expenses:Utilities:Electric     $100.00
    Expenses:Utilities:Water        $100.00
    Expenses:Utilities:Sewage       $100.00
    Liabilities:Education:ULL       $100.00
    Liabilities:Mortgage            $100.00
    Assets:Bank:Checking

test -J reg checking -> 1
__ERROR__
While parsing file "$FILE", line 13:
While parsing periodic transaction:
> ~ Monthly from 2010/7/1
>     Expenses:Auto:Gas               $100.00
>     Expenses:Auto:Insurance         $100.00
>     Expenses:Childcare              $100.00
>     Expenses:Entertainment:Blizzard $100.00
>     Expenses:Entertainment:Netflix  $100.00
>     Expenses:Groceries              $100.00
>     Expenses:Utilities:Electric     $100.00
>     Expenses:Utilities:Water        $100.00
>     Expenses:Utilities:Sewage       $100.00
>     Liabilities:Education:ULL       $100.00
>     Liabilities:Mortgage            $100.00
>     Assets:Bank:Checking
Error: Posting with null amount's account may be misspelled:
  "Expenses:Entertainment:Blizzard $100.00"
end test
